# local-references-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
.roo/: mcp.json
sample/best_practices/: dashboard.md  readme.md
sample/how_to/: linting.md  readme.md
src/local_references_mcp/: main.py  references.py
tests/: test_references.py
tests/__snapshots__/: test_references.ambr
